# helion4x

./: .gitignore  .swp  Camera.tscn  Camera2.gd  CelesitalObject.tscn  DebugDraw3D.gd  Game.tscn  GdUnitRunner.cfg  LICENSE  README.md  Sol.tscn  build.ps1  packages.config  project.godot
Assets/: packages.config
Assets/Gui/: TimeVIew.uxml
Assets/Materials/: IconGreen.mat  Skybox.mat
Assets/Models/: ColonyIcon.blend  FleetIcon.blend  FleetIconMerged.blend  FleetIconMerged.blend1
Assets/Objects/: City.asset  IndustrialDistrict.asset  StartingSettlement.asset
Assets/Prefabs/: SettlementIcon.prefab  SettlementSelector.prefab
Assets/Scenes/: Prototype.unity  SampleScene.unity  User Interface.unity
Helion4xTests/: EconomyTest.cs  Helion4xTests.csproj
ProjectSettings/: EditorSettings.asset  ProjectSettings.asset  TagManager.asset
helion4x/: Helion 4x.csproj  Helion 4x.sln  Helion4x.csproj  Pulsar 4x.csproj  Pulsar 4x.sln  project.godot
helion4x-core/: helion4x-core.csproj
helion4x-gdnative/: Cargo.toml
helion4x-gdnative-lib/: Cargo.toml
helion4x-gdnative/src/: lib.rs
helion4x-godot/: Helion4x.csproj  Helion4x.sln  Helion4x.sln.DotSettings  project.godot  results.xml  xqiy75q1peg81.png.import
helion4x-test/: helion4x-test.csproj
premades/: Camera.tscn
scenes/: Camera.tscn  CelesitalBody.tscn  CelestialBody.gd  Game.tscn  Menu.gd  Menu.tscn  celesital_body.tscn  time.tscn
scripts/: CelestialBody.gd  Game.gd  Menu.gd  Planet.gd  Timer.gd  Universe.cs  UniverseTime.cs  camera.gd  celestial_body.gd  planet_interface.gd
sprites/: sun.png.import
(+260 files in other folders)
